# concret

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  afro_gp.cpp  clean.sh  cmeans_test.cpp  concret.cpp  fgp.cpp  fgp2.cpp  forest_result.txt  fuzzy_test.cpp  gettodos.sh  gp.cpp  gp_fly.cpp  gp_hist.cpp  mixture.cpp  model_func_results.txt  results-ga.txt  results.txt  sugeno0.cpp  test.cpp  tree_test.cpp
cdata/: CMakeLists.txt  cdata.cpp  cdata.hpp
cluster/: cmeans.hpp
data/: abs_cos.csv  akieva.csv  akieva_big.csv  cdata1.csv  cdata2.csv  cdata3.csv  china.csv  china_small.csv  forestfires.csv  haupt1.csv  haupt11.csv  haupt2.csv  haupt3.csv  haupt4.csv  haupt9.csv  make_data.py  sinsin.csv  stack.csv  xsin.csv  xx.csv
fuzzy/: CMakeLists.txt  function.cpp  function.hpp  fuzzy_db.cpp  fuzzy_db.hpp  rule.cpp  rule.hpp  value.cpp  value.hpp
ga/: CMakeLists.txt  afro_ga.cpp  afro_ga.hpp  bin_crossover.cpp  bin_crossover.hpp  bin_dna_generator.cpp  bin_dna_generator.hpp  bin_fitness.cpp  bin_fitness.hpp  bin_mutator.cpp  bin_mutator.hpp  crossover.cpp  crossover.hpp  dna.cpp  dna.hpp  fitness.cpp  fitness.hpp  ga.hpp  gp_crossover.cpp  gp_crossover.hpp  gp_fitness.cpp  gp_fitness.hpp  gp_generator.cpp  gp_generator.hpp  gp_generator_hist.cpp  gp_generator_hist.hpp  gp_mutator.cpp  gp_mutator.hpp  hist_gp.cpp  hist_gp.hpp  history.hpp  mgen_crossover.cpp  mgen_crossover.hpp  mgen_generator.cpp  mgen_generator.hpp  mgen_mutator.cpp  mgen_mutator.hpp  mutator.cpp  mutator.hpp  niche.cpp  (+28 more)
images/: classic_haupt1.ps  classic_haupt2.ps  classic_haupt3.ps  schema_haupt2.ps  schema_haupt3.ps  scheme_haupt1.ps
python/: clean.sh  fitness.py  test.py
results/: china.txt  cmp-ga.py  draw_errors.py  draw_graphs.py  draw_result.py  draw_xp.py  (+19 more)
(+56 files in other folders)
